--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Joan, of Arc, Saint, 1412-1431'
 - !lcc 'DC'
+- GITenberg
 title: The Life of Joan of Arc, Vol. 1 and 2
 url: http://www.gutenberg.org/ebooks/19488
